2005-01-05  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/build_scripts.py: Create new command to extend
	the default build_scripts command.
	* setup.py: Use the extended build_scripts command.
	* GNUmakefile.in: Remove obsolete command.

2004-12-16  Stefan Seefeld <seefeld@sympatico.ca>

	* qm/test/web/web.py: Replace operator 'is' by '=='
	in string comparison

2004-10-28  Matthias Klose <doko@cs.tu-berlin.de>

	* qmdist/command/build_doc.py (build_doc.run): Use "openjade" if
	"jade" is not available.

2004-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* qm/__init__.py: Don't import or define 'lib_dir'.
	* qmdist/command/install_data.py (install_data.run): Don't define
	'lib_dir'.
	* qm/common.py (get_lib_directory): Don't use 'lib_dir' and
	'qm.prefix', but rather '__file__'.
	* qm/test/base.py (get_extension_directories): Remove
	now-redundant logic around call to 'get_lib_directory'.

2004-05-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest (check_python_version): Clarify error message.

2004-05-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest (check_python_version): Rework to avoid using
	newer Python features.

2004-05-26  Mark Mitchell  <mark@codesourcery.com>

	* MANIFEST.in (qm/test/doc/html/qm.css): Include it.

2004-05-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/execution_engine.py
	(ExecutionEngine._WriteInitialAnnotations): Check that uname is
	not None before trying to write it out.
	* qm/test/qmtest (qm.sigmask): Import it in the global scope, not
	...
	(main): ... here.

2004-05-24  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention improvements in 2.2.

	* GNUmakefile.in (distclean): Remove MANIFEST.
	* setup.py: Install documentation stylesheet.
	* doc/qm-sgml.dsl: Use documentation stylesheet.
	* doc/qm.css: Incorporate bits of CodeSourcery web site
	look-and-feel.
	* qmdist/command/build_doc.py (build_doc.run): Copy documentation
	stylesheet to HTML directory.
	