@@ -1,3 +1,8 @@
+2005-02-14  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/web.py: Replace deprecated use of whrandom by random.
+	* qm/external/DocumentTemplate/DT_Util.py: Likewise.
+
 2005-01-05  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qmdist/command/build_scripts.py: Create new command to extend
